fix: overflow title width

--- a/src/components/repository/ListData.module.css
+++ b/src/components/repository/ListData.module.css
@@ -25,6 +25,8 @@
 .list_title {
   font-size: 1.5rem;
   margin: 0 0 .3rem 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .list li {
